Improve handling of enum types for Keycloak options
Closes #40993

Signed-off-by: Martin Bartoš <mabartos@redhat.com>